[gd_scene load_steps=14 format=3 uid="uid://bw67w52g4rasi"]

[ext_resource type="Script" path="res://cutscenes/cutscene_small_slime.gd" id="1_1a0kp"]
[ext_resource type="Script" path="res://cutscenes/cutscene_slime_controller.gd" id="2_g6388"]
[ext_resource type="Texture2D" uid="uid://dgeavlqxk7310" path="res://common_assets/slimes/slime-half.png" id="3_jta2s"]
[ext_resource type="Script" uid="uid://cpb2ch1lvydrj" path="res://addons/softbody2d/softbody2d.gd" id="4_mnb2s"]

[sub_resource type="CircleShape2D" id="CircleShape2D_b0po8"]
radius = 128.92

[sub_resource type="Gradient" id="Gradient_mxs2o"]
offsets = PackedFloat32Array(0, 0.968127)
colors = PackedColorArray(1, 1, 1, 1, 0, 0, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_rm5ro"]
gradient = SubResource("Gradient_mxs2o")
fill = 1
fill_from = Vector2(0.5, 0.495726)
fill_to = Vector2(0.106838, 0.897436)

[sub_resource type="SkeletonModification2DLookAt" id="SkeletonModification2DLookAt_wa03m"]
resource_local_to_scene = true
bone_index = 0
bone2d_node = NodePath("Bone-0")
target_nodepath = NodePath("Bone-1")
editor/draw_gizmo = false

[sub_resource type="SkeletonModification2DLookAt" id="SkeletonModification2DLookAt_w1wqd"]
resource_local_to_scene = true
bone_index = 1
bone2d_node = NodePath("Bone-1")
target_nodepath = NodePath("Bone-2")
editor/draw_gizmo = false

[sub_resource type="SkeletonModification2DLookAt" id="SkeletonModification2DLookAt_pth4n"]
resource_local_to_scene = true
bone_index = 2
bone2d_node = NodePath("Bone-2")
target_nodepath = NodePath("Bone-1")
editor/draw_gizmo = false

[sub_resource type="SkeletonModification2DLookAt" id="SkeletonModification2DLookAt_dejrt"]
resource_local_to_scene = true
bone_index = 3
bone2d_node = NodePath("Bone-3")
target_nodepath = NodePath("Bone-2")
editor/draw_gizmo = false

[sub_resource type="SkeletonModificationStack2D" id="SkeletonModificationStack2D_yulkr"]
resource_local_to_scene = true
enabled = true
modification_count = 4
modifications/0 = SubResource("SkeletonModification2DLookAt_wa03m")
modifications/1 = SubResource("SkeletonModification2DLookAt_w1wqd")
modifications/2 = SubResource("SkeletonModification2DLookAt_pth4n")
modifications/3 = SubResource("SkeletonModification2DLookAt_dejrt")

[sub_resource type="CircleShape2D" id="CircleShape2D_eii70"]
resource_local_to_scene = true
radius = 38.0

[node name="slime_controller" type="Node2D"]
script = ExtResource("1_1a0kp")

[node name="slime_node" type="Node2D" parent="."]
process_physics_priority = 10
position = Vector2(-0.999999, 1)
script = ExtResource("2_g6388")

[node name="slime_hitbox" type="Area2D" parent="slime_node"]
collision_layer = 144
collision_mask = 144

[node name="CollisionShape2D" type="CollisionShape2D" parent="slime_node/slime_hitbox"]
shape = SubResource("CircleShape2D_b0po8")

[node name="PointLight2D" type="PointLight2D" parent="slime_node/slime_hitbox"]
position = Vector2(3, -10)
enabled = false
texture = SubResource("GradientTexture2D_rm5ro")
texture_scale = 10.0

[node name="slime_soft_body" type="Polygon2D" parent="slime_node"]
use_parent_material = true
position = Vector2(-104, -77)
scale = Vector2(0.8, 0.8)
texture = ExtResource("3_jta2s")
skeleton = NodePath("Skeleton2D")
polygon = PackedVector2Array(114, 18, 106, 19, 100, 19, 90, 23, 86, 23, 76, 28, 74, 28, 66, 34, 64, 34, 50, 49, 49, 49, 49, 51, 44, 56, 43, 56, 38, 66, 37, 66, 35, 73, 34, 73, 33, 81, 32, 81, 32, 92, 31, 92, 32, 132, 32, 137, 35, 143, 35, 145, 36, 146, 37, 146, 41, 154, 41, 156, 52, 167, 52, 168, 54, 168, 58, 172, 58, 173, 70, 177, 70, 178, 81, 180, 81, 181, 152, 181, 152, 180, 177, 180, 184, 178, 188, 178, 198, 172, 200, 172, 212, 158, 213, 158, 216, 150, 217, 150, 223, 126, 224, 126, 226, 100, 227, 100, 227, 89, 224, 74, 224, 68, 222, 64, 222, 61, 220, 59, 220, 56, 216, 51, 216, 49, 203, 37, 203, 36, 199, 34, 199, 33, 176, 22, 176, 21, 165, 19, 165, 18, 114, 17, 81, 167, 52, 167, 41, 156, 41, 154, 37, 146, 36, 146, 35, 145, 35, 143, 32, 137, 32, 132, 31.625, 117, 81, 117, 81, 117, 31.625, 117, 31, 92, 32, 92, 32, 81, 33, 81, 34, 73, 35, 73, 36.7143, 67, 81, 67, 81, 67, 36.7143, 67, 37, 66, 38, 66, 43, 56, 44, 56, 49, 51, 49, 49, 50, 49, 64, 34, 66, 34, 74, 28, 76, 28, 81, 25.5, 81, 180, 70, 178, 70, 177, 58, 173, 58, 172, 54, 168, 52, 168, 52, 167, 81, 167, 165, 18, 165, 19, 176, 21, 176, 22, 181, 24.3913, 181, 67, 131, 67, 131, 17.3333, 131, 17.3333, 131, 67, 81, 67, 81, 25.5, 86, 23, 90, 23, 100, 19, 106, 19, 114, 18, 114, 17, 131, 117, 81, 117, 81, 67, 131, 67, 181, 167, 131, 167, 131, 117, 181, 117, 131, 167, 81, 167, 81, 117, 131, 117, 181, 117, 131, 117, 131, 67, 181, 67, 131, 181, 81, 181, 81, 167, 131, 167, 181, 178.857, 177, 180, 152, 180, 152, 181, 131, 181, 131, 167, 181, 167, 224, 68, 224, 74, 227, 89, 227, 100, 226, 100, 224.692, 117, 181, 117, 181, 67, 223.5, 67, 224, 126, 223, 126, 217, 150, 216, 150, 213, 158, 212, 158, 204.286, 167, 181, 167, 181, 117, 224.692, 117, 199, 33, 199, 34, 203, 36, 203, 37, 216, 49, 216, 51, 220, 56, 220, 59, 222, 61, 222, 64, 223.5, 67, 181, 67, 181, 24.3913, 200, 172, 198, 172, 188, 178, 184, 178, 181, 178.857, 181, 167, 204.286, 167)
polygons = [PackedInt32Array(83, 72, 73), PackedInt32Array(73, 74, 75), PackedInt32Array(76, 77, 78), PackedInt32Array(79, 80, 81), PackedInt32Array(81, 82, 83), PackedInt32Array(83, 73, 75), PackedInt32Array(76, 78, 79), PackedInt32Array(79, 81, 83), PackedInt32Array(83, 75, 76), PackedInt32Array(76, 79, 83), PackedInt32Array(93, 84, 85), PackedInt32Array(85, 86, 87), PackedInt32Array(87, 88, 89), PackedInt32Array(89, 90, 91), PackedInt32Array(91, 92, 93), PackedInt32Array(93, 85, 87), PackedInt32Array(87, 89, 91), PackedInt32Array(91, 93, 87), PackedInt32Array(94, 95, 96), PackedInt32Array(97, 98, 99), PackedInt32Array(100, 101, 102), PackedInt32Array(102, 103, 104), PackedInt32Array(104, 105, 106), PackedInt32Array(106, 107, 94), PackedInt32Array(94, 96, 97), PackedInt32Array(97, 99, 100), PackedInt32Array(100, 102, 104), PackedInt32Array(104, 106, 94), PackedInt32Array(94, 97, 100), PackedInt32Array(100, 104, 94), PackedInt32Array(116, 108, 109), PackedInt32Array(110, 111, 112), PackedInt32Array(113, 114, 115), PackedInt32Array(116, 109, 110), PackedInt32Array(110, 112, 113), PackedInt32Array(113, 115, 116), PackedInt32Array(116, 110, 113), PackedInt32Array(124, 117, 118), PackedInt32Array(118, 119, 120), PackedInt32Array(120, 121, 122), PackedInt32Array(122, 123, 124), PackedInt32Array(124, 118, 120), PackedInt32Array(120, 122, 124), PackedInt32Array(134, 125, 126), PackedInt32Array(126, 127, 128), PackedInt32Array(128, 129, 130), PackedInt32Array(130, 131, 132), PackedInt32Array(133, 134, 126), PackedInt32Array(126, 128, 130), PackedInt32Array(130, 132, 133), PackedInt32Array(133, 126, 130), PackedInt32Array(138, 135, 136), PackedInt32Array(136, 137, 138), PackedInt32Array(142, 139, 140), PackedInt32Array(140, 141, 142), PackedInt32Array(146, 143, 144), PackedInt32Array(144, 145, 146), PackedInt32Array(150, 147, 148), PackedInt32Array(148, 149, 150), PackedInt32Array(154, 151, 152), PackedInt32Array(152, 153, 154), PackedInt32Array(161, 155, 156), PackedInt32Array(157, 158, 159), PackedInt32Array(159, 160, 161), PackedInt32Array(161, 156, 157), PackedInt32Array(157, 159, 161), PackedInt32Array(170, 162, 163), PackedInt32Array(163, 164, 165), PackedInt32Array(166, 167, 168), PackedInt32Array(168, 169, 170), PackedInt32Array(163, 165, 166), PackedInt32Array(168, 170, 163), PackedInt32Array(163, 166, 168), PackedInt32Array(180, 171, 172), PackedInt32Array(172, 173, 174), PackedInt32Array(174, 175, 176), PackedInt32Array(176, 177, 178), PackedInt32Array(178, 179, 180), PackedInt32Array(180, 172, 174), PackedInt32Array(174, 176, 178), PackedInt32Array(178, 180, 174), PackedInt32Array(193, 181, 182), PackedInt32Array(182, 183, 184), PackedInt32Array(184, 185, 186), PackedInt32Array(186, 187, 188), PackedInt32Array(188, 189, 190), PackedInt32Array(190, 191, 192), PackedInt32Array(192, 193, 182), PackedInt32Array(182, 184, 186), PackedInt32Array(186, 188, 190), PackedInt32Array(190, 192, 182), PackedInt32Array(182, 186, 190), PackedInt32Array(200, 194, 195), PackedInt32Array(195, 196, 197), PackedInt32Array(197, 198, 199), PackedInt32Array(199, 200, 195), PackedInt32Array(195, 197, 199)]
bones = ["Bone-0", PackedFloat32Array(0, 0, 0, 0, 0, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 1, 0, 0, 0, 0, 0, 0, 0, 1, 1, 0, 0, 0, 0, 0, 0, 1, 1, 0, 0, 0, 0, 0, 0, 1, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0), "Bone-1", PackedFloat32Array(1, 1, 1, 1, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 1, 1, 1, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0, 0, 1, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 1, 0, 0, 0, 0, 0, 0, 0), "Bone-2", PackedFloat32Array(0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 1, 1, 1, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 1, 0, 0, 0, 0, 0, 0, 0, 0, 1, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 1, 1, 0, 0, 1, 1, 0, 0, 0, 0, 0, 0, 0, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0, 0, 0, 0, 0, 0, 1, 1, 0, 0, 0, 0, 0, 0, 0, 0, 1, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 1, 1, 0), "Bone-3", PackedFloat32Array(0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1)]
internal_vertex_count = 129
script = ExtResource("4_mnb2s")
show_shapes = true
vertex_interval = 100
joint_type = "spring"
stiffness = 71.6
damping = 0.11
radius = 95
shape_type = "Circle"
margin_offset_edge = 20.0
mass = 0.3
collision_layer = 141
collision_mask = 141

[node name="Skeleton2D" type="Skeleton2D" parent="slime_node/slime_soft_body"]
visible = false
modification_stack = SubResource("SkeletonModificationStack2D_yulkr")

[node name="Bone-0" type="Bone2D" parent="slime_node/slime_soft_body/Skeleton2D"]
position = Vector2(75.9736, 101.724)
rotation = -0.631526
scale = Vector2(1, 1)
rest = Transform2D(0.807128, -0.590377, 0.590377, 0.807128, 75.9737, 101.724)
auto_calculate_length_and_angle = false
length = 100.0
bone_angle = 0.0
metadata/vert_owned = [72, 73, 74, 75, 76, 77, 78, 79, 80, 81, 82, 83, 84, 85, 86, 87, 88, 89, 90, 91, 92, 93, 94, 95, 96, 97, 98, 99, 100, 101, 102, 103, 104, 105, 106, 107, 108, 109, 110, 111, 112, 113, 114, 115, 116]
metadata/idx = 0
metadata/connected_nodes_paths = [NodePath("Bone-2"), NodePath("Bone-1")]
metadata/connected_nodes_idx = [2, 1]
metadata/_local_pose_override_enabled_ = true

[node name="Bone-1" type="Bone2D" parent="slime_node/slime_soft_body/Skeleton2D"]
position = Vector2(130.299, 61.9877)
rotation = 1.59203
scale = Vector2(1, 1)
rest = Transform2D(-0.0212327, 0.999775, -0.999775, -0.0212327, 130.299, 61.9877)
auto_calculate_length_and_angle = false
length = 100.0
bone_angle = 0.0
metadata/vert_owned = [117, 118, 119, 120, 121, 122, 123, 124, 125, 126, 127, 128, 129, 130, 131, 132, 133, 134]
metadata/idx = 1
metadata/connected_nodes_paths = [NodePath("Bone-0"), NodePath("Bone-2"), NodePath("Bone-3")]
metadata/connected_nodes_idx = [0, 2, 3]
metadata/_local_pose_override_enabled_ = true

[node name="Bone-2" type="Bone2D" parent="slime_node/slime_soft_body/Skeleton2D"]
position = Vector2(129.405, 104.064)
rotation = -1.54956
scale = Vector2(1, 1)
rest = Transform2D(0.0212328, -0.999775, 0.999775, 0.0212328, 129.405, 104.064)
auto_calculate_length_and_angle = false
length = 100.0
bone_angle = 0.0
metadata/vert_owned = [135, 136, 137, 138, 139, 140, 141, 142, 143, 144, 145, 146, 147, 148, 149, 150, 151, 152, 153, 154, 155, 156, 157, 158, 159, 160, 161]
metadata/idx = 2
metadata/connected_nodes_paths = [NodePath("Bone-0"), NodePath("Bone-1"), NodePath("Bone-3")]
metadata/connected_nodes_idx = [0, 1, 3]
metadata/_local_pose_override_enabled_ = true

[node name="Bone-3" type="Bone2D" parent="slime_node/slime_soft_body/Skeleton2D"]
position = Vector2(184.012, 100.925)
rotation = 3.08418
scale = Vector2(1, 1)
rest = Transform2D(-0.998352, 0.0573855, -0.0573855, -0.998352, 184.012, 100.925)
auto_calculate_length_and_angle = false
length = 100.0
bone_angle = 0.0
metadata/vert_owned = [162, 163, 164, 165, 166, 167, 168, 169, 170, 171, 172, 173, 174, 175, 176, 177, 178, 179, 180, 181, 182, 183, 184, 185, 186, 187, 188, 189, 190, 191, 192, 193, 194, 195, 196, 197, 198, 199, 200]
metadata/idx = 3
metadata/connected_nodes_paths = [NodePath("Bone-1"), NodePath("Bone-2")]
metadata/connected_nodes_idx = [1, 2]
metadata/_local_pose_override_enabled_ = true

[node name="Bone-0" type="RigidBody2D" parent="slime_node/slime_soft_body"]
position = Vector2(75.9737, 101.724)
collision_layer = 141
collision_mask = 141
mass = 0.3
metadata/idx = 0
metadata/bone_name = &"Bone-0"

[node name="CircleShape2D" type="CollisionShape2D" parent="slime_node/slime_soft_body/Bone-0"]
shape = SubResource("CircleShape2D_eii70")

[node name="RemoteTransform2D" type="RemoteTransform2D" parent="slime_node/slime_soft_body/Bone-0"]
visible = false
remote_path = NodePath("../../Skeleton2D/Bone-0")
update_rotation = false
update_scale = false

[node name="Joint2D-Bone-0-Bone-2" type="DampedSpringJoint2D" parent="slime_node/slime_soft_body/Bone-0"]
visible = false
rotation = -1.52703
node_a = NodePath("..")
node_b = NodePath("../../Bone-2")
length = 0.0
stiffness = 71.6
damping = 0.11
metadata/joint_distance = 42.7861

[node name="Joint2D-Bone-0-Bone-1" type="DampedSpringJoint2D" parent="slime_node/slime_soft_body/Bone-0"]
visible = false
rotation = -2.20232
node_a = NodePath("..")
node_b = NodePath("../../Bone-1")
length = 0.0
stiffness = 71.6
damping = 0.11
metadata/joint_distance = 53.8453

[node name="Bone-1" type="RigidBody2D" parent="slime_node/slime_soft_body"]
position = Vector2(130.299, 61.9877)
collision_layer = 141
collision_mask = 141
mass = 0.3
metadata/idx = 1
metadata/bone_name = &"Bone-1"

[node name="CircleShape2D" type="CollisionShape2D" parent="slime_node/slime_soft_body/Bone-1"]
shape = SubResource("CircleShape2D_eii70")

[node name="RemoteTransform2D" type="RemoteTransform2D" parent="slime_node/slime_soft_body/Bone-1"]
visible = false
remote_path = NodePath("../../Skeleton2D/Bone-1")
update_rotation = false
update_scale = false

[node name="Joint2D-Bone-1-Bone-0" type="DampedSpringJoint2D" parent="slime_node/slime_soft_body/Bone-1"]
visible = false
rotation = 0.939271
node_a = NodePath("..")
node_b = NodePath("../../Bone-0")
length = 0.0
stiffness = 71.6
damping = 0.11
metadata/joint_distance = 53.8453

[node name="Joint2D-Bone-1-Bone-2" type="DampedSpringJoint2D" parent="slime_node/slime_soft_body/Bone-1"]
visible = false
rotation = 0.0212342
node_a = NodePath("..")
node_b = NodePath("../../Bone-2")
length = 0.0
stiffness = 71.6
damping = 0.11
metadata/joint_distance = 33.6684

[node name="Joint2D-Bone-1-Bone-3" type="DampedSpringJoint2D" parent="slime_node/slime_soft_body/Bone-1"]
visible = false
rotation = -0.943551
node_a = NodePath("..")
node_b = NodePath("../../Bone-3")
length = 0.0
stiffness = 71.6
damping = 0.11
metadata/joint_distance = 53.0735

[node name="Bone-2" type="RigidBody2D" parent="slime_node/slime_soft_body"]
position = Vector2(129.405, 104.064)
collision_layer = 141
collision_mask = 141
mass = 0.3
metadata/idx = 2
metadata/bone_name = &"Bone-2"

[node name="CircleShape2D" type="CollisionShape2D" parent="slime_node/slime_soft_body/Bone-2"]
shape = SubResource("CircleShape2D_eii70")

[node name="RemoteTransform2D" type="RemoteTransform2D" parent="slime_node/slime_soft_body/Bone-2"]
visible = false
remote_path = NodePath("../../Skeleton2D/Bone-2")
update_rotation = false
update_scale = false

[node name="Joint2D-Bone-2-Bone-0" type="DampedSpringJoint2D" parent="slime_node/slime_soft_body/Bone-2"]
visible = false
rotation = -4.66863
node_a = NodePath("..")
node_b = NodePath("../../Bone-0")
length = 0.0
stiffness = 71.6
damping = 0.11
metadata/joint_distance = 42.7861

[node name="Joint2D-Bone-2-Bone-1" type="DampedSpringJoint2D" parent="slime_node/slime_soft_body/Bone-2"]
visible = false
rotation = -3.12036
node_a = NodePath("..")
node_b = NodePath("../../Bone-1")
length = 0.0
stiffness = 71.6
damping = 0.11
metadata/joint_distance = 33.6684

[node name="Joint2D-Bone-2-Bone-3" type="DampedSpringJoint2D" parent="slime_node/slime_soft_body/Bone-2"]
visible = false
rotation = -1.62821
node_a = NodePath("..")
node_b = NodePath("../../Bone-3")
length = 0.0
stiffness = 71.6
damping = 0.11
metadata/joint_distance = 43.7578

[node name="Bone-3" type="RigidBody2D" parent="slime_node/slime_soft_body"]
position = Vector2(184.012, 100.925)
collision_layer = 141
collision_mask = 141
mass = 0.3
metadata/idx = 3
metadata/bone_name = &"Bone-3"

[node name="CircleShape2D" type="CollisionShape2D" parent="slime_node/slime_soft_body/Bone-3"]
shape = SubResource("CircleShape2D_eii70")

[node name="RemoteTransform2D" type="RemoteTransform2D" parent="slime_node/slime_soft_body/Bone-3"]
visible = false
remote_path = NodePath("../../Skeleton2D/Bone-3")
update_rotation = false
update_scale = false

[node name="Joint2D-Bone-3-Bone-1" type="DampedSpringJoint2D" parent="slime_node/slime_soft_body/Bone-3"]
visible = false
rotation = -4.08514
node_a = NodePath("..")
node_b = NodePath("../../Bone-1")
length = 0.0
stiffness = 71.6
damping = 0.11
metadata/joint_distance = 53.0735

[node name="Joint2D-Bone-3-Bone-2" type="DampedSpringJoint2D" parent="slime_node/slime_soft_body/Bone-3"]
visible = false
rotation = 1.51338
node_a = NodePath("..")
node_b = NodePath("../../Bone-2")
length = 0.0
stiffness = 71.6
damping = 0.11
metadata/joint_distance = 43.7578

[connection signal="area_entered" from="slime_node/slime_hitbox" to="slime_node" method="_on_area_2d_area_entered"]
[connection signal="area_exited" from="slime_node/slime_hitbox" to="slime_node" method="_on_area_2d_area_exited"]
[connection signal="body_shape_entered" from="slime_node/slime_hitbox" to="slime_node" method="_on_slime_hitbox_body_shape_entered"]
[connection signal="body_shape_exited" from="slime_node/slime_hitbox" to="slime_node" method="_on_slime_hitbox_body_shape_exited"]
